plan prices selection text-align fixed

--- a/CSS/myCSS.css
+++ b/CSS/myCSS.css
@@ -456,6 +456,7 @@ html{
 
 .container5_box-bottom-sub{
     font-size: 2.5rem;
+    text-align: center;
 }
 
 .container5_box-bottom-subfree{
